fix(newsletter): prevent overflow

--- a/src/newsletter.scss
+++ b/src/newsletter.scss
@@ -9,6 +9,7 @@
     font-family: 'Roboto Flex', sans-serif;
     padding: 2rem 0;
     color: var(--bs-white);
+    overflow-x: hidden;
 
     .row {
         background-color: var(--color-grey-dark-4);
